[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ab_glyph = "0.2.25"
image = "0.25.1"
imageproc = "0.24.0"
log = "0.4.21"
num-complex = "0.4.5"
rusttype = "0.9.3"
worker = "0.0.18"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
